Update BorrowController.java